--- a/bookdownproj.Rmd
+++ b/bookdownproj.Rmd
@@ -711,3 +711,6 @@ modelo_step %>% predict(newdata = data.frame(datos.test)) -> predicciones_test
 library(caret)
 postResample(predicciones_test, obs = datos.test$Recuento)
 ```
+
+<!--chapter:end:index.Rmd-->
+
